@startuml

title __SEARCHACTIVITY's Class Diagram__\n

  namespace com.sapphireStar.android_project {
    namespace SearchActivity {
      class com.sapphireStar.android_project.SearchActivity.ConditionViewGroup {
          {static} + BTN_MODE : String
          {static} + TEV_MODE : String
          - HorInterval : int
          {static} - TAG : String
          - VerInterval : int
          - itemBGResNor : int
          - itemBGResPre : int
          - itemTextColorNor : int
          - itemTextColorPre : int
          - itemTextSize : float
          - mContext : Context
          - mTexts : ArrayList<String>
          - textModePadding : int
          - textModePaddingBottom : int
          - textModePaddingLeft : int
          - textModePaddingRight : int
          - textModePaddingTop : int
          - viewHeight : int
          - viewWidth : int
          + ConditionViewGroup()
          + ConditionViewGroup()
          + addItemViews()
          + chooseItemStyle()
          + getChooseText()
          + setGroupClickListener()
          + setItemBGResNor()
          + setItemBGResPre()
          + setItemTextColorNor()
          + setItemTextColorPre()
          + setItemTextSize()
          # onLayout()
          # onMeasure()
          - addItemView()
          - clearItemsStyle()
          - getNextHorLastPos()
          - getViewHeight()
          - measureHeight()
          - measureWidth()
          - setItemPadding()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace SearchActivity {
      interface com.sapphireStar.android_project.SearchActivity.ConditionViewGroup.OnGroupItemClickListener {
          {abstract} + onGroupItemClick()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace SearchActivity {
      class com.sapphireStar.android_project.SearchActivity.FlightAdapter {
          - is_admm : String
          - mContext : Context
          - mFlightList : List<Flight>
          - mPhone : String
          - mPlaneTicket : List<PlaneTicket>
          - mmyAttentions : List<PlaneTicket>
          + FlightAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace SearchActivity {
      class com.sapphireStar.android_project.SearchActivity.FlightAdapter.ViewHolder {
          + air_company : TextView
          + attention : ImageButton
          + departure_terminal : TextView
          + flight_number : TextView
          + food : TextView
          + is_attentiond : int
          + is_bus : TextView
          + is_direct : TextView
          + is_share : TextView
          + landing_terminal : TextView
          + landing_time : TextView
          + order : Button
          + price : TextView
          + punctuality_rate : TextView
          + takeoff_time : TextView
          + time_period : TextView
          + ViewHolder()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace SearchActivity {
      class com.sapphireStar.android_project.SearchActivity.SearchActivity {
          + bus : String
          + direct : String
          + domestic : String
          + eco : String
          + flightList : List<Flight>
          + flightListSort : List<Flight>
          + id : String
          + is_bus : int
          + is_direct : int
          + is_domestic : int
          + is_eco : int
          + is_share : int
          + is_sort : int
          + landing_city : String
          + myAttentionsPlaneTicketList : List<PlaneTicket>
          + phone : String
          + planeTicketList : List<PlaneTicket>
          + planeTicketListSort : List<PlaneTicket>
          + share : String
          + takeoff_city : String
          + takeoff_time : String
          - back_to_search : ImageButton
          - bottomSheetDialog : BottomSheetDialog
          - confirm : TextView
          - filter : View
          - float_btn : FloatingActionButton
          - is_adm : String
          - sharetext : ArrayList<String>
          # onCreate()
          - initFlight()
          - initdata()
      }
    }
  }
  

  com.sapphireStar.android_project.SearchActivity.ConditionViewGroup -up-|> android.view.ViewGroup
  com.sapphireStar.android_project.SearchActivity.ConditionViewGroup o-- com.sapphireStar.android_project.SearchActivity.ConditionViewGroup.OnGroupItemClickListener : onGroupItemClickListener
  com.sapphireStar.android_project.SearchActivity.ConditionViewGroup +-down- com.sapphireStar.android_project.SearchActivity.ConditionViewGroup.OnGroupItemClickListener
  com.sapphireStar.android_project.SearchActivity.FlightAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.sapphireStar.android_project.SearchActivity.FlightAdapter +-down- com.sapphireStar.android_project.SearchActivity.FlightAdapter.ViewHolder
  com.sapphireStar.android_project.SearchActivity.FlightAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.sapphireStar.android_project.SearchActivity.SearchActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.sapphireStar.android_project.SearchActivity.SearchActivity o-- com.sapphireStar.android_project.SearchActivity.ConditionViewGroup : directGroup
  com.sapphireStar.android_project.SearchActivity.SearchActivity o-- com.sapphireStar.android_project.SearchActivity.ConditionViewGroup : seatGroup
  com.sapphireStar.android_project.SearchActivity.SearchActivity o-- com.sapphireStar.android_project.SearchActivity.ConditionViewGroup : shareGroup
  com.sapphireStar.android_project.SearchActivity.SearchActivity o-- com.sapphireStar.android_project.SearchActivity.ConditionViewGroup : sortGroup


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
